--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 /* fonts google */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap");
 /* font-family: 'Montserrat', sans-serif; */
 html {
   scroll-behavior: smooth;
@@ -12,7 +12,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+button:focus{
+  outline: 3px solid #baddfd;
 }
 img {
   width: 100%;
@@ -22,7 +25,7 @@ a {
 }
 
 p {
-  color: var(--black-1);
+  color: #000000;
 }
 /* gird  */
 .container {
@@ -147,6 +150,9 @@ header h1 a:hover {
   margin: -1rem -0.5rem 0 -0.5rem;
   color: #616060;
 }
+.right-side section .card .card-title h2 {
+  font-weight: normal;
+}
 .right-side section .card .card-image {
   border: 2px solid var(--black-1);
 }
@@ -162,8 +168,24 @@ header h1 a:hover {
   padding: 10px 20px;
   border-radius: 5px;
 }
+.right-side section .copy-view .category {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: -1rem auto;
+}
+.right-side section .copy-view .category button {
+  background: #0d6efd;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin: 0.5rem;
+  border-radius: 5px;
+}
 .right-side section section {
-  overflow: scroll;
+  overflow: auto;
   max-height: 400px;
   padding: 1rem 0.5rem;
   background-color: aliceblue;
