--- a/assets/component/color/color.css
+++ b/assets/component/color/color.css
@@ -1,75 +1,75 @@
-.right-side section .card .card-image .images{
+.right-side section .card .card-image .images {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
   row-gap: 1rem;
   padding: 1rem;
 }
-.right-side section .card .card-image .images .item{
+.right-side section .card .card-image .images .item {
   background-color: aliceblue;
   padding: 1rem 0.5rem;
   border: 1px solid #282921;
 }
 
 #primary,
-#bg-primary,
-#text-primary,
-#border-primary{
+#bg_primary,
+#text_primary,
+#border_primary {
   background-color: #0d6efd;
 }
 #secondary,
-#bg-secondary,
-#text-secondary,
-#border-secondary{
+#bg_secondary,
+#text_secondary,
+#border_secondary {
   background-color: #6c757d;
 }
 #success,
-#bg-success,
-#text-success,
-#border-success{
+#bg_success,
+#text_success,
+#border_success {
   background-color: #198754;
 }
 #info,
-#bg-info,
-#text-info,
-#border-info{
+#bg_info,
+#text_info,
+#border_info {
   background-color: #0dcaf0;
 }
 #warning,
-#bg-warning,
-#text-warning,
-#border-warning{
+#bg_warning,
+#text_warning,
+#border_warning {
   background-color: #ffc107;
 }
 #danger,
-#bg-danger,
-#text-danger,
-#border-danger{
+#bg_danger,
+#text_danger,
+#border_danger {
   background-color: #dc3545;
 }
 #white,
-#bg-white,
-#text-white,
-#border-white{
+#bg_white,
+#text_white,
+#border_white {
   background-color: #ffffff;
 }
 #light,
-#bg-light,
-#text-light,
-#border-light{
+#bg_light,
+#text_light,
+#border_light {
   background-color: #f8f9fa;
 }
 #black,
-#bg-black,
-#text-black,
-#border-black{
+#bg_black,
+#text_black,
+#border_black {
   background-color: #000000;
   color: #f8f9fa;
 }
 #dark,
-#bg-dark,
-#text-dark,
-#border-dark{
+#bg_dark,
+#text_dark,
+#border_dark {
   background-color: #212529;
   color: #f8f9fa;
 }
