--- a/assets/component/aside/aside.css
+++ b/assets/component/aside/aside.css
@@ -1,20 +1,3 @@
-aside {
-  overflow-y: scroll;
-  height: 95vh;
-  scrollbar-width: thin;
-  scrollbar-color: var(--yellow) var(--white);
-}
-aside {
-  width: 30%;
-  float: left;
-  margin-right: 1rem;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 8%;
-  background-color: var(--white);
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  padding: 1rem;
-}
 aside .profile {
   text-align: center;
   border-bottom: 2px solid var(--black-1);
@@ -26,7 +9,7 @@ aside .profile img {
   transition: 0.5s;
 }
 aside .profile:hover img {
-  outline: 5px solid var(--yellow);
+  outline: 10px solid var(--primary);
 }
 .nav-bar {
   margin-top: 20px;
@@ -36,7 +19,7 @@ aside .profile:hover img {
   list-style: none;
   margin: 10px 0;
 }
-.nav-bar nav ul li{
+.nav-bar nav ul li {
   display: block;
   padding: 10px 12px;
   border-radius: 20px;
