--- a/assets/component/color/color.css
+++ b/assets/component/color/color.css
@@ -1,11 +1,11 @@
-.right-side section .card .card-image .images {
+main section .card .card-image .images {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
   row-gap: 1rem;
   padding: 1rem;
 }
-.right-side section .card .card-image .images .item {
+main section .card .card-image .images .item {
   background-color: aliceblue;
   padding: 1rem 0.5rem;
   border: 1px solid #282921;
