--- a/assets/component/header/header.css
+++ b/assets/component/header/header.css
@@ -10,15 +10,15 @@ header {
   z-index: 1;
 }
 header h1 {
-  color: var(--black-1);
+  color: #7952b3;
   text-align: center;
   text-transform: uppercase;
   font-size: 1.5rem;
 }
 header h1 a {
-  color: var(--black-1);
+  color: #7952b3;
 }
 header h1 a:hover {
   text-decoration: underline;
-  color: var(--yellow);
+  color: var(--primary);
 }
